tests/b_invalid/invalid_character.out
tests/b_invalid/invalid_character.ri:1:1: error: invalid character ```
    1 | `
      | ^
rivetc: error: could not compile module `invalid_character`, aborting due to previous error